@@ -1,3 +1,9 @@
+2008-10-20  Jorge Gonzalez  <jorgegonz@artica.es>
+
+	* operation/agentes/estado_agente.php, operation/agentes/bulbs.php:
+	  fixed bug, blue monitor means it has no monitors, while gray means
+	  it has no data.
+
 2008-10-20  Esteban Sanchez  <estebans@artica.es>
 
 	* operation/agentes/estado_grupo.php: Fixed a notice error when the
